prevent kbd elements from wrapping

--- a/scss/_html.scss
+++ b/scss/_html.scss
@@ -122,4 +122,7 @@ html.bcbb-theme {
   }
   */
 
+  kbd {
+    white-space: nowrap;
+  }
 }
